2007-11-29  Martin Mares <mj@ucw.cz>

	* lib/dump.c: Squashed compiler warnings about code with
	no effect (there really were surplus *'s).

2007-11-06  Martin Mares <mj@ucw.cz>

	* Released as 2.2.9.

	* lspci.c: Added a new switch `-k' which requests printing
	of information on kernel drivers attached to each device
	and on kernel modules reporting the ability to handle the
	device. So far, this is supported only on Linux with the
	sysfs back-end, so it is implemented internally in the lspci
	instead of the libpci. Thanks to Anicka <anicka@anicka.net>
	for help.

2007-10-19  Martin Mares <mj@ucw.cz>

	* Makefile, lib/Makefile: Moved -lz from LDFLAGS to LDLIBS.
	Also added an explicit pattern rule for linking to make sure
	that LDLIBS is used on all platforms. Thanks to Dan Nicholson
	for the suggestion.

2007-10-19  Martin Mares <mj@ucw.cz>

	* Released as 2.2.8.

	* pci.ids: Revised class codes to match Conventional PCI 3.0 specs.
	Added a couple of new ones, renumbered `ADMA continuous operation'
	prog-if to 0x30 (even the old SATA Class Code ECN doesn't mention
	0x40) and renumbered the satellite communication controllers.

	* lib/header.h: Include `PCI hot-plug' and `Secure device'
	capabilities from PCI 3.0 specs. Also added `SATA HBA' and
	`Advanced features' caps from various ECN's.

	* lspci.c: All known capabilities have at least their name displayed
	now. When we are unable to decode them completely, we signalize it
	with a `<?>' mark.

	* lspci.man: Document `<?>' and also mention that extended config
	space is currently available only with the linux_sysfs back-end.

	* lspci.c: Decode the Debug port capability (per EHCI 0.96 spec).

	* lspci.c: Big code cleanup: re-arranged functions in the code,
	renamed everything related to capabilities to cap_* and
	all options except verbose to opt_*.

2007-10-14  Martin Mares <mj@ucw.cz>

	* lib/[fno]bsd-*: Removed extraneous braces.

2007-10-12  Martin Mares <mj@ucw.cz>
